# game-rewind

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml  release.yml
docs/configs/: README.md  USER_CONFIGS.md
resources/: icons.qrc
src/: main.cpp
src/core/: database.cpp  database.h  gameinfo.cpp  gameinfo.h  profiledetector.cpp  profiledetector.h  savemanager.cpp  savemanager.h
src/steam/: gamedetector.cpp  gamedetector.h  manifestmanager.cpp  manifestmanager.h  steamutils.cpp  steamutils.h
src/ui/: addgamedialog.cpp  addgamedialog.h  backupdialog.cpp  backupdialog.h  backupitemdelegate.cpp  backupitemdelegate.h  bulkbackupdialog.cpp  bulkbackupdialog.h  gamecarddelegate.cpp  gamecarddelegate.h  gameconfigdialog.cpp  gameconfigdialog.h  gameicon.cpp  gameicon.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  onboardingdialog.cpp  onboardingdialog.h  profiledialog.cpp  profiledialog.h  settingsdialog.cpp  settingsdialog.h  style.cpp  style.h
tests/: CMakeLists.txt  test_database.cpp  test_profiledetector.cpp  test_savemanager.cpp  test_steamutils.cpp
